Support Vector Regressor Updated

--- a/Data Analysis/Support Vector Regressor.ipynb
+++ b/Data Analysis/Support Vector Regressor.ipynb
@@ -137,12 +137,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Utility"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(pred, true, outcome):\n",
+    "    print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(pred[:,outcome], true[:,outcome])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +191,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -279,7 +298,7 @@
        " 'verbose': False}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +353,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +373,7 @@
        "{'C': 1.0, 'degree': 2, 'epsilon': 0.001, 'kernel': 'poly'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +405,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +425,7 @@
        "{'C': 1.0, 'degree': 2, 'epsilon': 0.001, 'kernel': 'poly'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +457,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +477,7 @@
        "{'C': 2.0, 'degree': 2, 'epsilon': 0.1, 'kernel': 'rbf'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,14 +526,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.993539%\n",
+      "Explained Variance Score: 99.993539%\n",
       "Mean Absolute Error: 0.708895\n",
       "Mean Squared Error: 0.000018\n"
      ]
@@ -523,32 +542,7 @@
    "source": [
     "# Frequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.951406%\n",
-      "Mean Absolute Error: 0.048013\n",
-      "Mean Squared Error: 0.000024\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode1, y_test, 0)"
    ]
   },
   {
@@ -560,7 +554,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 70.553163%\n",
+      "Explained Variance Score: 99.951406%\n",
+      "Mean Absolute Error: 0.048013\n",
+      "Mean Squared Error: 0.000024\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode1, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 70.553163%\n",
       "Mean Absolute Error: 0.313308\n",
       "Mean Squared Error: 0.001599\n"
      ]
@@ -569,9 +584,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode1, y_test, 2)"
    ]
   },
   {
@@ -590,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +634,7 @@
        " 'n_jobs': None}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +685,7 @@
        "             scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +709,7 @@
        " 'estimator__kernel': 'rbf'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,14 +753,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.967723%\n",
+      "Explained Variance Score: 99.967723%\n",
       "Mean Absolute Error: 1.562724\n",
       "Mean Squared Error: 0.001100\n"
      ]
@@ -756,32 +769,7 @@
    "source": [
     "# Requency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.695230%\n",
-      "Mean Absolute Error: 0.088277\n",
-      "Mean Squared Error: 0.000084\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode2, y_test, 0)"
    ]
   },
   {
@@ -793,7 +781,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 69.916094%\n",
+      "Explained Variance Score: 99.695230%\n",
+      "Mean Absolute Error: 0.088277\n",
+      "Mean Squared Error: 0.000084\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode2, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 69.916094%\n",
       "Mean Absolute Error: 0.316619\n",
       "Mean Squared Error: 0.001639\n"
      ]
@@ -802,9 +811,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode2, y_test, 2)"
    ]
   },
   {
@@ -818,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +922,7 @@
        "4    0.5  63  510     5    468.260          7.4041              3.8655"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -959,34 +966,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_1.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.980973%\n",
-      "Mean Absolute Error: 0.943772\n",
-      "Mean Squared Error: 0.000040\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -998,18 +982,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.205908%\n",
-      "Mean Absolute Error: 11.318089\n",
-      "Mean Squared Error: 0.644649\n"
+      "Explained Variance Score: 99.980973%\n",
+      "Mean Absolute Error: 0.943772\n",
+      "Mean Squared Error: 0.000040\n"
      ]
     }
    ],
    "source": [
-    "# Max Deflection Outcome\n",
+    "# Fequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 0)"
    ]
   },
   {
@@ -1021,7 +1003,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 60.161892%\n",
+      "Explained Variance Score: 66.205908%\n",
+      "Mean Absolute Error: 11.318089\n",
+      "Mean Squared Error: 0.644649\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_1, test_Y, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 60.161892%\n",
       "Mean Absolute Error: 5.819700\n",
       "Mean Squared Error: 0.571772\n"
      ]
@@ -1030,9 +1033,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 2)"
    ]
   },
   {
@@ -1044,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,34 +1055,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_2.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.967733%\n",
-      "Mean Absolute Error: 1.559183\n",
-      "Mean Squared Error: 0.000453\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -1093,7 +1071,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.267247%\n",
+      "Explained Variance Score: 99.967733%\n",
+      "Mean Absolute Error: 1.559183\n",
+      "Mean Squared Error: 0.000453\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fequency Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 66.267247%\n",
       "Mean Absolute Error: 11.315369\n",
       "Mean Squared Error: 0.644507\n"
      ]
@@ -1102,14 +1101,12 @@
    "source": [
     "# Max Deflection Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1125,9 +1122,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 2)"
    ]
   }
  ],
