Ridge Regression Updated

--- a/Data Analysis/Ridge Regression.ipynb
+++ b/Data Analysis/Ridge Regression.ipynb
@@ -136,12 +136,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing"
+    "# Utility"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(pred, true, outcome):\n",
+    "    print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(pred[:,outcome], true[:,outcome])))\n",
+    "    print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(pred[:,outcome], true[:,outcome])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +190,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,40 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "model1 = Ridge(alpha=0.1, random_state=seed)\n",
     "model2 = Ridge(alpha=0.1, random_state=seed)\n",
     "model3 = Ridge(alpha=0.1, random_state=seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'alpha': 0.1,\n",
-       " 'copy_X': True,\n",
-       " 'fit_intercept': True,\n",
-       " 'max_iter': None,\n",
-       " 'normalize': False,\n",
-       " 'random_state': 140,\n",
-       " 'solver': 'auto',\n",
-       " 'tol': 0.001}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model1.get_params()"
    ]
   },
   {
@@ -308,7 +300,7 @@
     }
    ],
    "source": [
-    "model2.get_params()"
+    "model1.get_params()"
    ]
   },
   {
@@ -335,7 +327,7 @@
     }
    ],
    "source": [
-    "model3.get_params()"
+    "model2.get_params()"
    ]
   },
   {
@@ -346,11 +338,38 @@
     {
      "data": {
       "text/plain": [
+       "{'alpha': 0.1,\n",
+       " 'copy_X': True,\n",
+       " 'fit_intercept': True,\n",
+       " 'max_iter': None,\n",
+       " 'normalize': False,\n",
+       " 'random_state': 140,\n",
+       " 'solver': 'auto',\n",
+       " 'tol': 0.001}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model3.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "Ridge(alpha=0.1, copy_X=True, fit_intercept=True, max_iter=None,\n",
        "      normalize=False, random_state=140, solver='auto', tol=0.001)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.988760%\n",
+      "Explained Variance Score: 99.988760%\n",
       "Mean Absolute Error: 1.129195\n",
       "Mean Squared Error: 0.000084\n"
      ]
@@ -415,21 +434,19 @@
    "source": [
     "# Frequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,0], y_test[:,0])))"
+    "evaluate(y_pred_mode1, y_test, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.897937%\n",
+      "Explained Variance Score: 99.897937%\n",
       "Mean Absolute Error: 0.071139\n",
       "Mean Squared Error: 0.000043\n"
      ]
@@ -438,14 +455,12 @@
    "source": [
     "# Max Deflection Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode1, y_test, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -454,7 +469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 12.570217%\n",
+      "Explained Variance Score: 12.570217%\n",
       "Mean Absolute Error: 0.460529\n",
       "Mean Squared Error: 0.003116\n"
      ]
@@ -463,9 +478,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode1[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode1[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode1, y_test, 2)"
    ]
   },
   {
@@ -484,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +507,7 @@
        "      normalize=False, random_state=140, solver='auto', tol=0.001)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 99.988787%\n",
+      "Explained Variance Score: 99.988787%\n",
       "Mean Absolute Error: 1.114491\n",
       "Mean Squared Error: 0.000086\n"
      ]
@@ -555,32 +568,7 @@
    "source": [
     "# Requency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,0], y_test[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,0], y_test[:,0])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.898041%\n",
-      "Mean Absolute Error: 0.070813\n",
-      "Mean Squared Error: 0.000043\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Max Deflection Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,1], y_test[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,1], y_test[:,1])))"
+    "evaluate(y_pred_mode2, y_test, 0)"
    ]
   },
   {
@@ -592,7 +580,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 12.685608%\n",
+      "Explained Variance Score: 99.898041%\n",
+      "Mean Absolute Error: 0.070813\n",
+      "Mean Squared Error: 0.000043\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(y_pred_mode2, y_test, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 12.685608%\n",
       "Mean Absolute Error: 0.460511\n",
       "Mean Squared Error: 0.003116\n"
      ]
@@ -601,9 +610,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(y_pred_mode2[:,2], y_test[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(y_pred_mode2[:,2], y_test[:,2])))"
+    "evaluate(y_pred_mode2, y_test, 2)"
    ]
   },
   {
@@ -617,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +721,7 @@
        "4    0.5  63  510     5    468.260          7.4041              3.8655"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,34 +765,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_1.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.978692%\n",
-      "Mean Absolute Error: 1.318724\n",
-      "Mean Squared Error: 0.000114\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -797,18 +781,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.219973%\n",
-      "Mean Absolute Error: 11.322454\n",
-      "Mean Squared Error: 0.645025\n"
+      "Explained Variance Score: 99.978692%\n",
+      "Mean Absolute Error: 1.318724\n",
+      "Mean Squared Error: 0.000114\n"
      ]
     }
    ],
    "source": [
-    "# Max Deflection Outcome\n",
+    "# Fequency Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 0)"
    ]
   },
   {
@@ -820,7 +802,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 41.943583%\n",
+      "Explained Variance Score: 66.219973%\n",
+      "Mean Absolute Error: 11.322454\n",
+      "Mean Squared Error: 0.645025\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Max Deflection Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_1, test_Y, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 41.943583%\n",
       "Mean Absolute Error: 5.693695\n",
       "Mean Squared Error: 0.557344\n"
      ]
@@ -829,9 +832,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_1[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_1[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_1, test_Y, 2)"
    ]
   },
   {
@@ -843,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,34 +854,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert test_pred_y_mode_2.shape == test_Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explained Varaince Score: 99.979029%\n",
-      "Mean Absolute Error: 1.304914\n",
-      "Mean Squared Error: 0.000114\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fequency Outcome\n",
-    "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,0], test_Y[:,0])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,0], test_Y[:,0])))"
    ]
   },
   {
@@ -892,7 +870,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Explained Varaince Score: 66.186923%\n",
+      "Explained Variance Score: 99.979029%\n",
+      "Mean Absolute Error: 1.304914\n",
+      "Mean Squared Error: 0.000114\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fequency Outcome\n",
+    "\n",
+    "evaluate(test_pred_y_mode_2, test_Y, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explained Variance Score: 66.186923%\n",
       "Mean Absolute Error: 11.322461\n",
       "Mean Squared Error: 0.644996\n"
      ]
@@ -901,14 +900,12 @@
    "source": [
     "# Max Deflection Outcome\n",
     "\n",
-    "print(\"Explained Varaince Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,1], test_Y[:,1])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,1], test_Y[:,1])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -924,9 +921,7 @@
    "source": [
     "# Average Defelction Outcome\n",
     "\n",
-    "print(\"Explained Variance Score: {:0.6f}%\".format(100*explained_variance_score(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Absolute Error: {:0.6f}\".format(mean_absolute_error(test_pred_y_mode_2[:,2], test_Y[:,2])))\n",
-    "print(\"Mean Squared Error: {:0.6f}\".format(mean_squared_log_error(test_pred_y_mode_2[:,2], test_Y[:,2])))"
+    "evaluate(test_pred_y_mode_2, test_Y, 2)"
    ]
   }
  ],
